# openai-grpc-server

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  buf.gen.yaml  buf.yaml  go.mod
.github/workflows/: ci.yml
bazel/: BUILD  aliyun_oss_sdk.BUILD  base64.BUILD  concurrentqueue.BUILD  curl.BUILD  liboai.BUILD  openssl.BUILD
cert/: privkey.key
conf/: aliyun_oss.yaml  auth.yaml  gflags.conf  ielts_ai.yaml  prompt.yaml  redis.yaml
conf/response_format/: ielts_talk_report.json
gateway/: BUILD  main.go
proto/: BUILD  chat.proto  chat_completion.proto  go.mod
proto/auth/: auth.pb.go  auth.pb.gw.go  auth.proto  auth_grpc.pb.go
proto/chat_completion/: chat_completion.pb.go  chat_completion.pb.gw.go  chat_completion.proto  chat_completion_grpc.pb.go
proto/exercise_pool/: exercise_pool.pb.go  exercise_pool.pb.gw.go  exercise_pool.proto  exercise_pool_grpc.pb.go
proto/user/: user.pb.go  user.pb.gw.go  user.proto  user_grpc.pb.go
protos/: demo.proto
src/: BUILD  client_article.cpp  client_transcribe.cpp  ielts_ai.cpp  main.cpp  test_client.cpp
src/core/: BUILD  netimpl.cpp  netimpl.h  response.cpp  response.h
src/plugin/: BUILD  log_sink.cpp  log_sink.h  logging.cpp  logging.h  oss.cpp  oss.h  prompt.cpp  prompt.h  redis_client.cpp  redis_client.h  token.cpp  token.h
src/processor/: BUILD  plus.cpp  plus.h  unsupported_command.cpp  (+1 more)
test/: BUILD  main.cpp  test_babylon.cpp  test_basic_op.cpp  test_demo.cpp  test_graph.cpp  test_html_parse.cpp  test_json.cpp  test_liboai.cpp  test_oss.cpp  test_prompt.cpp  test_util.cpp  test_wx_payment.cpp  test_yaml_parser.cpp
(+26 files in other folders)
